Fixed some styling related to the filter panel collapse button

--- a/style/browse.css
+++ b/style/browse.css
@@ -1,12 +1,10 @@
-/******************************
-
-Styling for browse-movies.php
-
-******************************/
+body {
+    width: auto;
+}
 
 main {
     display: flex;
-    height: 100vh;
+    height: calc(100vh - var(--header-height));
 }
 
 /******************************
@@ -134,7 +132,7 @@ Search results styling
     background: none;
     border: none;
     
-    position: fixed;
+    position: absolute;
     
     font-size: 2rem;
     width: 2rem;
@@ -229,6 +227,8 @@ Mobile
     main {
         flex-direction: column;
         height: 100%;
+        
+        min-width: 0;
     }
     
     #filters {
@@ -262,7 +262,7 @@ Mobile
     #hide {
         position: sticky;
         left: 0;
-        top: 29.5rem;
+        top: calc(29.5rem + var(--header-height));
         z-index: 2;
         
         margin-top: calc(var(--container-padding) * -1);
